# nmode

./: .cspell.json  README.md  main.py  pyproject.toml
.github/workflows/: build-and-test.yml  lint.yml
src/: _types.py  loader.py
src/nmode/: cli.py  core.py  loader.py  trainer.py
